Add layout to sign in and sign up components and call appwrite function in both, also add CustomButton and CustomInput components

--- a/app/global.css
+++ b/app/global.css
@@ -50,7 +50,7 @@
     }
 
     .input {
-        @apply rounded-lg p-3 w-full text-base font-[QuickSand-Semibold] text-dark-100 border-b leading-5;
+        @apply rounded-lg p-3 w-full text-base font-[QuickSand-SemiBold] text-dark-100 border-b leading-5;
     }
 
     .filter {
